# gast-app-streamlit

./: .gitignore  BAKTA_INTEGRATION.md  DOCKER_SETUP.md  Dockerfile  Dockerfile.api  Dockerfile.api.dev  Dockerfile.streamlit  MIGRATION_GUIDE.md  README.md  annotate_sequence.py  bakta_client_job_info.txt  bakta_job_info.txt  build_container.sh  check_match_column.py  db_test.py  docker-compose.yml  fix_bakta_integration.py  install_bakta_module.py  migrate_to_postgresql_part1.py  migrate_to_postgresql_part2.py  output.csv  pyproject.toml  rebuild_containers.sh  requirements-dev.txt  requirements-test.txt  requirements.txt  run_amr_server.py  setup.py  store_antibiotics_to_db.py  test-requirements.txt  use_bakta_client.py  validate_bakta_module.py
amr_predictor/: __main__.py  cli.py
analysis/: test.fasta
bakta_client_results/: result.embl  result.ffn  result.gbff  result.json  result.tsv
bakta_results/: result.embl  result.fna  result.gbff  result.hypotheticals.tsv  result.inference.tsv  result.json
datasets/: DSM_20231_prefixed.fasta  antibiotic_df.csv  antibiotic_df.pkl  dsm.xlsx  head.id  oxa264.fasta  test_positive.fasta
debug_scripts/: add_import.py  check_amr_api_jobs.py  check_job.py  debug_download.py  debug_job_status.py  direct_connection_fix.py  direct_db_query.py  direct_job_check.py  explore_db.py  final_api_fix.py  final_database_fix.py  fix_api_endpoint.py  fix_api_job_endpoint.py  fix_background_task.py  fix_database_connection.py  fix_db_connection.py  fix_db_connection_robust.py  fix_db_locks.py  fix_db_locks_simple.py  fix_download_endpoint.py  fix_endpoint_exact.py  fix_field_names.py  fix_indentation.py  fix_indentation_api.py  fix_indentation_repo.py  fix_job_endpoint.py  fix_job_endpoint_corrected.py  fix_job_name_constraint.py  fix_job_name_direct.py  fix_job_status.py  fix_job_status_api.py  fix_jobs_endpoint.py  fix_kwargs.py  fix_progress_tracker.py  fix_progress_tracker_params.py  fix_repository.py  fix_result_column.py  fix_syntax.py  fix_syntax_error.py  fix_transaction.py  (+17 more)
docs/: 1_merging_prompt.md  (+24 more)
(+284 files in other folders)
